# shuruTech

./: .gitignore  db.sqlite3  manage.py  pyproject.toml  readme.md  requirements.txt
matchHub/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
matchHub/migrations/: 0001_initial.py
shuruTech/: asgi.py  settings.py  urls.py  wsgi.py
